# ClassyPython

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: class.puml
src/classpy/adapters/: __init__.py
src/classpy/adapters/cli/: app.py
src/classpy/adapters/code/: __init__.py  inspector.py
src/classpy/adapters/config/: __init__.py  loader.py
src/classpy/adapters/puml/: __init__.py  parser.py  scaffold.py  writer.py
src/classpy/domain/: __init__.py  balance.py  comparison.py  dependency.py  locator.py  models.py
src/classpy/services/: sync_service.py
tests/adapters/: test_cli.py  test_code_inspector.py  test_config_loader.py  test_puml_parser.py  test_puml_scaffold.py  test_puml_writer.py
tests/domain/: test_balance.py  test_comparison.py  test_dependency.py  test_locator.py
tests/services/: test_sync_service.py
