[project]
name = "classpy"
version = "0.1.0"
description = "The CLI tool for UML management"
authors = [
    {name = "GuilhermeCF",email = "guicostaferreira.2003@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "classpy", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
